<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013-2017 Metin Kale
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="activateForMorePrefs">Activate for more Preferences</string>
    <string name="adjAngle">Angle based (angle/60th of night)</string>
    <string name="adjMidnight">Midnight</string>
    <string name="adjTime">Time based (1/7th of night)</string>
    <string name="angleBased">Angle</string>
    <string name="appName">Prayer Times</string>
    <string name="asr">Asr</string>
    <string name="calcMethod">Method</string>
    <string name="calendar">Holy Days</string>
    <string name="cancel">Cancel</string>
    <string name="cities">Cities</string>
    <string name="compass">Prayer Compass</string>
    <string name="customVolume">Choose Volume</string>
    <string name="date">Date</string>
    <string name="delConfirm">Do you really want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="dhikr">Dhikr</string>
    <string name="dlSound">Download “%1$s” (%2$s)?</string>
    <string name="error">An error occurred</string>
    <string name="imsak">Imsak</string>
    <string name="fajr">Fajr</string>
    <string name="highlatsAdj">High Latitudes Adjustment:</string>
    <string name="fixTimezone">Timezone +/-:</string>
    <string name="gmonth1">January</string>
    <string name="gmonth2">February</string>
    <string name="gmonth3">March</string>
    <string name="gmonth4">April</string>
    <string name="gmonth5">May</string>
    <string name="gmonth6">June</string>
    <string name="gmonth7">July</string>
    <string name="gmonth8">August</string>
    <string name="gmonth9">September</string>
    <string name="gmonth10">October</string>
    <string name="gmonth11">November</string>
    <string name="gmonth12">December</string>
    <string name="hadith">Sahih al-Bukhary</string>
    <string name="hmonth1">Muharram</string>
    <string name="hmonth2">Safar</string>
    <string name="hmonth3">Rabi al-awwal</string>
    <string name="hmonth4">Rabi al-achir</string>
    <string name="hmonth5">Jumada al-awwal</string>
    <string name="hmonth6">Jumada l-akhira</string>
    <string name="hmonth7">Rajab</string>
    <string name="hmonth8">Shaban</string>
    <string name="hmonth9">Ramadan</string>
    <string name="hmonth10">Shawwal</string>
    <string name="hmonth11">Dhu l-Qaʿda</string>
    <string name="hmonth12">Dhū l-Hijja</string>
    <string name="holyday1">Islamic New Year</string>
    <string name="holyday2">Ashura</string>
    <string name="holyday3">Mawlid al-Nabi</string>
    <string name="holyday4">Beginning of the three sacred months</string>
    <string name="holyday5">Laylat ul Ragaib</string>
    <string name="holyday6">Laylat ul Isra and Miraj</string>
    <string name="holyday7">Laylat ul Bara’ah</string>
    <string name="holyday8">Ramadan begins</string>
    <string name="holyday9">Laylat al-Qadr</string>
    <string name="holyday10">(Arafat of Eid al-Fitr)</string>
    <string name="holyday11">Eid al-Fitr 1st day</string>
    <string name="holyday12">Eid al-Fitr 2nd day</string>
    <string name="holyday13">Eid al-Fitr 3rd day</string>
    <string name="holyday14">Arafat Day</string>
    <string name="holyday15">Eid al-Adha  1st day</string>
    <string name="holyday16">Eid al-Adha  2nd day</string>
    <string name="holyday17">Eid al-Adha  3rd day</string>
    <string name="holyday18">Eid al-Adha  4th day</string>
    <string name="ishaa">Ishaa</string>
    <string name="juristicHanafi">Hanafi</string>
    <string name="juristicShafi">Shafi (Default)</string>
    <string name="kerahatTime">Makruh Praying Time</string>
    <string name="maghrib">Maghrib</string>
    <string name="missedPrayers">Missed Prayers</string>
    <string name="monthly">Month View</string>
    <string name="morningPrayer">Morning Prayer</string>
    <string name="names">99 Names of Allah</string>
    <string name="newAddCity">Use new City Chooser</string>
    <string name="no">No</string>
    <string name="notification">Notification</string>
    <string name="ok">OK</string>
    <string name="oldAddCity">Use manuel City Chooser</string>
    <string name="ongoingNotification">Notification-Widget</string>
    <string name="permissionCalendarText">If you want, that the Holy Days appear in your Phone Calendar, you have to allow Calendar Access. Otherwise do not.</string>
    <string name="permissionCalendarTitle">Calendar Berechtigung</string>
    <string name="permissionCameraText">To use 3D-Compass, you need to allow Camera access. Otherwise you will only be able to use the 2D-Compass.</string>
    <string name="permissionCameraTitle">Camera Permission</string>
    <string name="permissionLocationText">Location Permission is needed, to find your City. If you don\'t allow this App, to access your Location, you have to search for your City manually.</string>
    <string name="permissionLocationTitle">Location Permission</string>
    <string name="permissionStorageText">Storage Permission is needed. Without that Permission some things will not work.</string>
    <string name="permissionStorageTitle">Storage Permission</string>
    <string name="prayerNotification">Prayer Notification</string>
    <string name="refresh">Synchronize</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="shareTimes">Today\'s Prayertimes for %1$s</string>
    <string name="showMore">Show more</string>
    <string name="soundPicker">Sound Picker</string>
    <string name="sound">Sound</string>
    <string name="sun">Sun</string>
    <string name="tesbihat">Tasbeehat</string>
    <string name="timeBased">Minutes</string>
    <string name="time">Time</string>
    <string name="test">Try</string>
    <string name="useVibration">Vibration</string>
    <string name="version">Version</string>
    <string name="volumeAlarm">Alarm-Volume</string>
    <string name="volumeMedia">Media-Volume</string>
    <string name="volumeRingtone">Ringtone-Volume</string>
    <string name="yes">Yes</string>
    <string name="zuhr">Zuhr</string>
    <string name="calculated">Calculated</string>
    <string name="autoremove_notification">Remove Notification after Adhan</string>
    <string name="about">About</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="export">Export</string>
    <string name="versionNotSupported">Your Android Version does not support this!</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="addFromCSV">Add from CSV</string>
    <string name="csvFromFile">Load CSV from File</string>
    <string name="csvFromURL">Load CSV from URL</string>
    <string name="asrSani" translatable="false">Asr Sânî</string>
    <string name="noAdjustment">No adjustments</string>
    <string name="customCalc">Custom</string>
    <string name="customCalcDesc">Set custom calculation parameters</string>
    <string name="autoLocation">Auto Location</string>
    <string name="stop">Stop</string>
    <string name="onTime">On time</string>
    <string name="beforeTime">%1$d minutes before</string>
    <string name="afterTime">%1$d minutes later</string>
    <string name="addAudio">Add new sound</string>
    <string name="fajrShort">Assalatu Khairum Minan Naum</string>
    <string name="takbir">Takbir</string>
    <string name="adhanDua">Adhan Dua</string>
    <string name="salavat">Salawat</string>
    <string name="volume">Volume</string>
    <string name="volumeNotification">Notification-Volume</string>


    <string name="noti_beforeTime">%1$d minutes before %2$s</string>
    <string name="noti_exactTime">at %2$s</string>
    <string name="noti_exactAll">at each prayer time</string>
    <string name="noti_beforeAll">%1$s minutes before each prayer time</string>
    <string name="noti_afterAll">%1$s minutes after each prayer time</string>
    <string name="noti_eachDay">Every day %2$s</string>
    <string name="noti_weekday">Each %1$s %2$s</string>

</resources>