<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2013-2023 Metin Kale
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/kerahat"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/alert"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/kerahatTime"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="18sp" />


    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lines="1"
        android:scaleX="0.80"
        android:scaleY="0.80"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kerahat"
        tools:text="DATE" />


    <ImageView
        android:id="@+id/gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_gps"
        app:layout_constraintBottom_toTopOf="@+id/hicri"
        app:layout_constraintEnd_toStartOf="@+id/city"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/city"
        app:layout_constraintVertical_bias="0.4"
        app:tint="@color/foregroundSecondary" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lines="1"
        app:layout_constraintBottom_toTopOf="@+id/hicri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/gps"
        app:layout_constraintTop_toBottomOf="@+id/date"
        tools:text="CITY" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/hicri"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:lines="1"
        android:scaleX="0.80"
        android:scaleY="0.80"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/fajr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        tools:text="HIJRI" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/fajr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/fajr"
        app:layout_constraintBottom_toTopOf="@+id/sun"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hicri" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/fajrTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/fajr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/fajr"
        tools:text="00:00" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/sun"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/sun"
        app:layout_constraintBottom_toTopOf="@+id/zuhr"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fajr" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/sunTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/sun"
        tools:text="00:00" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/zuhr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/zuhr"
        app:layout_constraintBottom_toTopOf="@+id/asr"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sun" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/zuhrTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/zuhr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/zuhr"
        tools:text="00:00" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/asr"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/asr"
        app:layout_constraintBottom_toTopOf="@+id/maghrib"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/zuhr" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/asrTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/asr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/asr"
        tools:text="00:00" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/maghrib"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/maghrib"
        app:layout_constraintBottom_toTopOf="@+id/ishaa"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/asr" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/maghribTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/maghrib"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/maghrib"
        tools:text="00:00" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/ishaa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/ishaa"
        app:layout_constraintBottom_toTopOf="@+id/countdown"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/maghrib" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/ishaaTime"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-thin"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="@+id/ishaa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toTopOf="@+id/ishaa"
        tools:text="00:00" />

    <com.metinkale.prayer.times.utils.AutoResizeTextView
        android:id="@+id/countdown"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:scaleX="0.80"
        android:scaleY="0.80"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ishaa"
        tools:text="COUNTDOWN" />

    <ImageView
        android:id="@+id/source2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/appName"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kerahat"
        tools:src="@drawable/ic_ditib" />

    <ImageView
        android:id="@+id/source1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/appName"
        android:cropToPadding="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kerahat"
        tools:src="@drawable/ic_igmg" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>